--- a/public/index.html
+++ b/public/index.html
@@ -8,8 +8,17 @@
 
 <body>
   <p>welcome to chat app </p>
-  <script src="/socket.io/socket.io.js"></script>
 
+  <ol id="messages"></ol>
+
+  <form id="message-form">
+    <input name="message" type="text" placeholder="message"/>
+
+    <button>Send</button>
+
+  </form>
+  <script src="/socket.io/socket.io.js"></script>
+  <script src="/js/libs/jquery-3.3.1.min.js"></script>
   <script src="/js/index.js"></script>
 
 </body>
